  * debianbts.py
    - added 'nm.debian.org' pseudo-package, Giridhar's patch (Closes: #478414)
    - removed Gnome BTS from bugs forward; Giridhar's patch (Closes: #439351)
    - removed [cruft-report] option from ftp.debian.org RM template;
      Giridhar's patch (Closes: #474970)
    - reintroduced 'kernel' pseudo-package, but just to fall back to
      'linux-image' (Closes: #423197)
  * reportbug.py
    - uses dpkg when dlocate can't find the package's file (Closes: #429824,
      #422369, #322983, #408834)
  * reportbug.el
    - applied patch to let Gnus work; thanks to Håkon Stordahl for it (Closes:
      #227153)
  * reportbug
    - explained how to reuse a saved file (generated by not submitting a bug
      report); (Closes: #328531)
    - (get_other_package_name) even if 'kernel' pseudo-package is chosen, we
      will default on 'linux-image'
  * reportbug.1
    - fixed a little typo in "-i FILE, --include=FILE" options, as suggested
      in #328531

  [ Ben Finney ]
  * Makefile, */module.mk
    - Begin a modular makefile structure for package development and build
      tasks
  * test/*
    - Begin unit test suite
    - Add make target so 'make test' runs the unit test suite
  * debian/control
    - Build-Depends-Indep on 'python-nose' for the unit test suite
  * README.developers
    - Describe new unit test suite capabilities
    - Describe new makefile targets 'test', 'test-continuous', 'coverage',
      'pyflakes', 'pylint'
  * reportbug
    - Remove ancient workaround for 'import site' (originally introduced
      for bug #290043), no longer needed in any supported Python version.
    - Clean up temp file always during mail message generation
      (closes: #340560).

  [ Y Giridhar Appaji Nag ]
  * Use singular they instead of he/she.  Thanks Adeodato Simó
    <dato@net.com.org.es> (Closes: #458356)
  * Add security-tracker to the list of pseudo-packages, re-org the list to be
    in alphabetical order (like it was earlier).
